--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <div class="grid-layout">
-            <h1>Estilo <span id="logoux">Ux</span> </h1>
+        <div class="grid-layout header-flex">
+            <h1>estilo<span id="logoux">Ux</span></h1>
             <nav>
                 <a href="">Home</a>
                 <a href="">Sobre</a>
@@ -23,7 +23,7 @@
 
     <main>
         <section>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQvfupIzmjaqrrA413GJULESoK1OJx17OhLRYzLN4coQ&s" alt="Lapis de cor">
+            <img src="images/lapis-de-cor.png" alt="Lapis de cor">
             <h2>Cores com harmonia</h2>
             
             <h3>Entenda como fazer combinação de cores que fazem sentido para sua identidade visual.</h3>
